fix font size on mobile

--- a/css/style_flex.css
+++ b/css/style_flex.css
@@ -11,7 +11,7 @@ h3 {
   display: flex;
   background-color: black;
   /* font-family: 'Courier New', monospace; */
-  
+
 }
 
 /* Style the navigation bar links */
@@ -44,23 +44,6 @@ h3 {
   padding: 10px;
 }
 
-/* Responsive layout when the screen is less than 600px wide */
-@media screen and (max-width: 600px) {
-
-  .row,
-  .navbar,
-  .fungames {
-    flex-direction: column;
-  }
-
-  .label,
-  .info,
-  input[type=submit] {
-    width: 100%;
-    margin-top: 0;
-  }
-}
-
 .fungames h3 {
   text-align: center;
 }
@@ -85,7 +68,6 @@ h3 {
 
 .fungames>div p {
   /* font-family: 'Courier New', monospace; */
-
 }
 
 /* sign up form */
@@ -168,26 +150,20 @@ input[type=submit]:hover {
   width: 50%;
 }
 
-
 .about h2,
 ul li {
-  /* padding-bottom: 20px; */
-  font-size: 10px;
   color: black;
   font-weight: bolder;
   letter-spacing: 2px;
-  /* font-family: 'Courier New', monospace; */
   font-size: x-large;
   text-transform: uppercase;
 }
-
 
 /* .li:before {
   content: ”\00A3″;
   font-family: “Font Awesome 5 Free“;
   font-weight: 900;
 } */
-
 
 ul.no-bullets {
   list-style-type: none;
@@ -199,7 +175,8 @@ ul.no-bullets {
   font-family: 'Courier New', monospace;
 }
 
-.fungames h3, p {
+.fungames h3,
+p {
   color: black;
   font-weight: bolder;
   letter-spacing: 2px;
@@ -219,5 +196,34 @@ h2 {
   /* font-family: 'Courier New', monospace; */
   font-size: x-large;
   text-transform: uppercase;
+}
 
+/* Responsive layout when the screen is less than 600px wide */
+@media screen and (max-width: 600px) {
+
+  .row,
+  .navbar,
+  .fungames {
+    flex-direction: column;
+  }
+
+  .label,
+  .info,
+  input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+
+  .about {
+    width: auto;
+  }
+
+  .about h2,
+  ul li {
+    font-weight: normal;
+    letter-spacing: 2px;
+    font-size: medium;
+    text-transform: uppercase;
+  }
+  
 }
